tests/valid/trait/method_call_explicit_ufcs_empty_struct_literal_receiver.facet
struct Token {}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Token {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (<unrestricted Token as Runner>::run Token {})
}
