tests/invalid/trait/method_call_missing_method.facet
trait Runner {
  fn run(self: Self) -> ();
  fn stop(self: Self) -> ();
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> () {
    ()
  }
  fn stop(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  (<unrestricted isize as Runner>::pause 0)
}
